--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_script:
   - mkdir ../build
   - cd ../build
 script:
-  - cmake ../Queue
+  - cmake ../Data_Structures
   - make -j
   - cd ./bin/
   - ./test_queue
